--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 <body>
 
     <div class="nav-container">
-        <button class="sector-btn" onclick="changeChart('의료ID입력')">🏥 의료/바이오</button>
+        <button class="sector-btn" onclick="changeChart('r79B3K5F',this)">🏥 의료/바이오</button>
         <button class="sector-btn" onclick="changeChart('반도체ID입력')">💻 반도체/AI</button>
         <button class="sector-btn" onclick="changeChart('r79B3K5F')">💰 크립토/선물</button>
-        <button class="sector-btn" onclick=loadSector('r79B3K5F')">💰 전력</button>
+        <button class="sector-btn" onclick="changeChart('r79B3K5F',this)">💰 전력</button>
         
         <span class="info-text">Updated: 2026.01.13</span>
     </div>
